[Qt] QWebHistory::saveState() is inconsistent with the Qt API https://bugs.webkit.org/show_bug.cgi?id=30710

Patch by Kenneth Rohde Christiansen <kenneth@webkit.org> on 2009-10-28
Reviewed by Holger Freyther.

Remove the QWebHistory::saveState() and ::restoreState() as
they are inconsistent with the Qt API.

Update unittests to reflect the change.

* Api/qwebhistory.cpp:
(operator<<):
(operator>>):
* Api/qwebhistory.h:
* tests/qwebhistory/tst_qwebhistory.cpp:
(saveHistory):
(restoreHistory):
(tst_QWebHistory::saveAndRestore_crash_1):
(tst_QWebHistory::saveAndRestore_crash_2):
(tst_QWebHistory::saveAndRestore_crash_3):
(tst_QWebHistory::clear):

Canonical link: https://commits.webkit.org/41656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50214 268f45cc-cd09-0410-ab3c-d52691b4dbfc